1: Adds testimonials. 2: Fixes toggling of nav bar on phones to collapse when link is clicked. 3: Centers logos in Footer vertically.

--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -9,16 +9,19 @@
     flex-direction: row;
     justify-content: flex-start;
     text-align: right;
+    align-items: center;
 }
 
 #footer-center{
     font-size: small;
+    align-items: center;
 }
 #footer--right {
     display: flex;
     flex-direction: row;
     justify-content: flex-end;
     text-align: right;
+    align-items: center;
 }
 
 #footer-link:link {
