--- a/src/components/Testimonials.css
+++ b/src/components/Testimonials.css
@@ -1,33 +1,26 @@
-#classes{
+#testimonials {
     background-color: #f9f9f9;
     /* color: #f9f9ff; */
+    /* height: 50vmin; */
 }
 
-#class--text-box--entry {
-    display: flex;
-    flex-direction: column;
-    grid-template-rows: 25px 1fr;
-    margin-bottom: 50px;
+#testimonials-container {
+    padding: 2% 5%;
 }
 
-#class--text-box--entry--header{
-    display: flex;
-    justify-content:space-between;
+#testimonials--top {
+    text-align: center;
+    /* background-color: aquamarine; */
 }
 
-#class-right {
-    padding: 5% 9% 5% 15%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+#testimonials--bottom {
+    /* overflow-y: scroll; */
+    height: 25vmin;
+    /* padding-right: 100px; */
+    /* background-color: cadetblue; */
 }
 
-#class-left {
-    padding: 5% 20% 5% 15%;
-    display: flex;
-    justify-content: center;
-}
 
-#class-image {
-    height: 75vmin;
+.carousel-indicators{
+    margin-bottom: -1rem;
 }
